feat: add shallow flag for info about validators to skip requests for each validator state
